--- a/src/main/resources/templates/admin/domestic.html
+++ b/src/main/resources/templates/admin/domestic.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layout/layout.html}" xmlns="http://www.w3.org/1999/html"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
 
 <head>
   <meta charset="UTF-8">
