--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -59,7 +59,7 @@
                                 <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}" th:text="${notice.subject}" th:attr="data-id=${notice.id}"></a>
                             </td>
                             <td class="py-2">
-                                <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}" th:text="${notice.register.nickName}" th:attr="data-id=${notice.id}"></a>
+                                <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}" th:text="${notice.noticeRegister.nickName}" th:attr="data-id=${notice.id}"></a>
                             </td>
                             <td class="py-2">
                                 <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}" th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}" th:attr="data-id=${notice.id}"></a>
