--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -122,7 +122,7 @@
                 </span>
             </a>
 
-            <a href="#" class="inline-flex flex-shrink-0">
+            <a sec:authorize="isAuthenticated()" th:href="@{/member/cart/{id}(id=${#authentication.principal.id})}" class="inline-flex flex-shrink-0">
                 <span class="ml-[2px]">
                     장바구니
                 </span>
@@ -179,7 +179,7 @@
             <a href="/notice/list" class="hover:text-red-500">
                 공지사항
             </a>
-            <a href="#" class="hover:text-red-500">
+            <a sec:authorize="isAuthenticated()" th:href="@{/member/cart/{id}(id=${#authentication.principal.id})}" class="hover:text-red-500">
                 장바구니
             </a>
             <a href="/admin/member" sec:authorize="hasRole('ROLE_ADMIN')" class="hover:text-red-500">
